--- a/.github/workflows/main_nba-payroll-wins.yml
+++ b/.github/workflows/main_nba-payroll-wins.yml
@@ -30,7 +30,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r nbarequirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -78,4 +78,5 @@ jobs:
         with:
           app-name: 'nba-payroll-wins'
           slot-name: 'Production'
+          startup-command: 'python3 nba-payrollvswins.py'
           
