--- a/.github/workflows/main_nba-payroll-wins.yml
+++ b/.github/workflows/main_nba-payroll-wins.yml
@@ -78,5 +78,5 @@ jobs:
         with:
           app-name: 'nba-payroll-wins'
           slot-name: 'Production'
-          startup-command: 'python3 nbapayrollvswins.py'
+          startup-command: 'python nbapayrollvswins.py'
           
