--- a/.github/workflows/main_nba-payroll-wins.yml
+++ b/.github/workflows/main_nba-payroll-wins.yml
@@ -78,5 +78,5 @@ jobs:
         with:
           app-name: 'nba-payroll-wins'
           slot-name: 'Production'
-          startup-command: 'python nbapayrollvswins.py'
+          startup-command: 'gunicorn --workers 4 --bind 0.0.0.0:8000 wsgi:server'
           
